# bmad-automate

./: .gitignore  README.md  pyproject.toml
src/bmad_automate/: __init__.py  cli.py
